--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, ex eius quo quis suscipit natus dicta. Aut omnis odit in accusamus consectetur reprehenderit maxime iure, iste a possimus accusantium facere!</p>
+    </div>
     
 </body>
 </html>
