--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, ex eius quo quis suscipit natus dicta. Aut omnis odit in accusamus consectetur reprehenderit maxime iure, iste a possimus accusantium facere!</p>
     </div>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, ex eius quo quis suscipit natus dicta. Aut omnis odit in accusamus consectetur reprehenderit maxime iure, iste a possimus accusantium facere!</p>
+    </div>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, ex eius quo quis suscipit natus dicta. Aut omnis odit in accusamus consectetur reprehenderit maxime iure, iste a possimus accusantium facere!</p>
+    </div>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, ex eius quo quis suscipit natus dicta. Aut omnis odit in accusamus consectetur reprehenderit maxime iure, iste a possimus accusantium facere!</p>
+    </div>
     
 </body>
 </html>
