--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, ex eius quo quis suscipit natus dicta. Aut omnis odit in accusamus consectetur reprehenderit maxime iure, iste a possimus accusantium facere!</p>
     </div>
+
+    <div>
+        <h3> You to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message </li>
+            <li>git push </li>
+        </ul>
+    </div>
     
 </body>
 </html>
