added antor's pic

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <li>git push </li>
         </ul>
     </div>
+    <div>
+        <h3>Mohammod Antor Ali</h3>
+        <img width="100px" src="my image/whats.jpg" alt="">
+
+    </div>
     
 </body>
 </html>
